--- a/style.css
+++ b/style.css
@@ -2,62 +2,70 @@
 
 /* Global Styles */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f5eda8ff;  
-    margin: 0;
-    padding: 0;
+  font-family: "Inter", sans-serif;
+
+  /* background-color: #f5eda8ff;   */
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    max-width: 1200px;
+  max-width: 1200px;
 }
 
 /* Header Styles */
 h1 {
-    color: #343a40; /* Dark gray, can be changed to your branding color */
-    font-weight: 700;
+  color: #343a40; /* Dark gray, can be changed to your branding color */
+  font-weight: 700;
 }
 
 button.btn-primary {
-    background-color: #007bff; /* Bootstrap primary blue, can be customized */
-    border: none;
-    border-radius: 0;
+  background-color: #f5eda8ff; /* Bootstrap primary blue, can be customized */
+  border: none;
+  border-radius: 5;
+  color: black;
 }
 
 button.btn-primary:hover {
-    background-color: #0056b3; /* Darker shade of the above blue for hover effect */
+  background-color: rgb(224, 217, 154);
+  color: black;
+}
+
+button.btn-primary:active {
+  background-color: rgb(224, 217, 154);
+  color: black;
 }
 
 /* Main Content Styles */
 h3 {
-    color: #343a40;
-    font-weight: 600;
+  color: #343a40;
+  font-weight: 600;
 }
 
 p {
-    color: #6c757d; /* Bootstrap secondary gray, for the text */
+  color: #6c757d; /* Bootstrap secondary gray, for the text */
 }
 
 /* Image/Thumbnail Styles */
 .img-fluid {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow to the images */
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow to the images */
 }
 
 /* Thumbnails Title and Text Styles */
 h5 {
-    margin-top: 10px;
-    color: #343a40;
+  margin-top: 10px;
+  color: #343a40;
 }
 
 /* Footer Styles */
 h2 {
-    color: #343a40;
-    font-weight: 600;
+  color: #343a40;
+  font-weight: 600;
 }
 
-#logo{
-    display: none !important;
+#logo {
+  display: none !important;
 }
