--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,28 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
-.App {
-  overflow: hidden;
+Body {
+  padding: 0px;
+  margin: 0px;
 }
 
 .Header {
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.16);
+  overflow: hidden;
+}
+
+.section {
+  padding: 25px;
 }
 
 .btn-primary {
   background-color: black;
+  /* background-color: rgba(225, 216, 152, 1); */
+  /* color: black; */
   border: none;
+}
+
+.btn-primary:hover {
+  background-color: rgba(106, 103, 191, 1);
 }
 
 .tagline {
@@ -40,21 +52,31 @@ h3 {
   line-height: normal;
 }
 
+h4 {
+  color: #000000;
+  font-family: Inter;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 p {
   color: #000;
   font-family: Inter;
-  font-size: 20px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
 .card {
-  margin: 10px;
+  /* margin-bottom: 20px; */
   padding: 25px;
   border-radius: 14px;
   border: 1px solid #d9d9d9;
   transition: background-color 0.5s;
+  gap: 20px;
 }
 
 .card:hover {
@@ -71,7 +93,40 @@ p {
   height: 34px;
 }
 
+.footer-section {
+  background-color: black;
+  padding: 0px;
+  height: 120px;
+  overflow: hidden;
+}
+
+.footer-section a {
+  color: white;
+}
+
 .spline-wrapper {
   overflow: hidden;
   height: 500px;
+}
+
+.img-fluid {
+  border-radius: 15px;
+  width: 100%;
+}
+
+.card-container {
+  gap: 20px;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.background-color {
+  background-color: rgba(243, 241, 224, 1);
+  width: 100%;
+  height: 500px;
+  margin-top: -500px;
+  position: absolute;
+  z-index: -1;
 }
