--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ Body {
   background-color: rgba(106, 103, 191, 1);
 }
 
+.purple {
+  color: rgba(106, 103, 191, 1);
+}
+
 .tagline {
   color: #6f6a46;
   font-family: Inter;
@@ -74,14 +78,42 @@ p {
   /* margin-bottom: 20px; */
   padding: 25px;
   border-radius: 14px;
-  border: 1px solid #d9d9d9;
+  border: 2px solid #d9d9d9;
   transition: background-color 0.5s;
   gap: 20px;
+  background: none;
 }
 
-.card:hover {
-  background-color: #d9d9d9;
+.purple-card {
+  /* margin-bottom: 20px; */
+  padding: 25px;
+  border-radius: 14px;
+  border: 2px solid rgba(106, 103, 191, 1);
+  transition: background-color 0.5s;
+  gap: 20px;
+  background: none;
 }
+
+.purple-card p {
+  color: rgba(106, 103, 191, 1);
+}
+
+.purple-card h3 {
+  color: rgba(106, 103, 191, 1);
+}
+
+.purple-card .btn-primary {
+  background: rgba(106, 103, 191, 1);
+  font-size: 18px;
+}
+
+.purple-card .btn-primary:hover {
+  background: rgb(64, 60, 156);
+}
+
+/* .card:hover {   */
+/* background-color: #d9d9d9; */
+/* } */
 
 .product-workflow-section {
   margin-top: 100px;
@@ -122,13 +154,21 @@ p {
   padding: 0px;
 }
 
-.background-color {
+.background-offset {
   background-color: rgba(243, 241, 224, 1);
   width: 100%;
   height: 500px;
   margin-top: -500px;
   position: absolute;
   z-index: -1;
+}
+
+.yellow-background {
+  background: rgba(225, 216, 152, 0.9);
+}
+
+.light-yellow-background {
+  background-color: rgba(243, 241, 224, 1);
 }
 
 .talk-cta {
@@ -138,4 +178,8 @@ p {
 }
 .talk-cta:hover {
   color: rgba(106, 103, 191, 1);
+}
+
+.height-100 {
+  height: 100%;
 }
